--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
@@ -2,31 +2,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fakenews_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
     tools:context=".FakeNews">
 
-    <TextView
-        android:id="@+id/fakenewstextview"
-        android:layout_width="343dp"
-        android:layout_height="579dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="56dp"
-        android:background="@drawable/shadowbox"
-        android:fontFamily="@font/montserrat"
-        android:isScrollContainer="true"
-        android:maxLines="10000"
-        android:scrollbars="vertical"
-        android:text="Fake News to be displayed here"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textStyle="italic"
+    <!-- A ScrollView to make the layout scrollable -->
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- The TextView to display the fake news -->
+        <TextView
+            android:id="@+id/fakenewstextview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="37dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="56dp"
+            android:background="@drawable/shadowbox"
+            android:fontFamily="@font/montserrat"
+            android:isScrollContainer="true"
+            android:maxLines="10000"
+            android:scrollbars="vertical"
+            android:text="Fake News to be displayed here"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textStyle="italic" />
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
