--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,9 +10,9 @@
     tools:context=".AllNews">
 
     <!-- A ScrollView to make the layout scrollable -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,15 +28,18 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
+            android:fadeScrollbars="false"
             android:fontFamily="@font/montserrat"
+            android:isScrollContainer="true"
             android:maxLines="10000"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
-            android:textStyle="italic"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:text="All the news is displayed here"/>
+            android:text="All the news is displayed here"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
