--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
@@ -27,15 +27,18 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
+            android:fadeScrollbars="false"
             android:fontFamily="@font/montserrat"
             android:isScrollContainer="true"
             android:maxLines="10000"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
             android:text="Fake News to be displayed here"
-            android:textAlignment="center"
-            android:textAllCaps="true"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textStyle="italic" />
+            android:verticalScrollbarPosition="right" />
 
     </ScrollView>
 
