--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
@@ -6,28 +6,39 @@
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
     tools:context=".TrueNews">
-
-    <TextView
-        android:id="@+id/truenewstextview"
-        android:layout_width="343dp"
-        android:layout_height="579dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="56dp"
-        android:background="@drawable/shadowbox"
-        android:fontFamily="@font/montserrat"
-        android:isScrollContainer="true"
-        android:maxLines="10000"
-        android:scrollbars="vertical"
-        android:text="All True news to be displayed here"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textStyle="italic"
+    <!-- A ScrollView to make the layout scrollable -->
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/truenewstextview"
+            android:layout_width="343dp"
+            android:layout_height="579dp"
+            android:layout_marginStart="37dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="56dp"
+            android:background="@drawable/shadowbox"
+            android:fadeScrollbars="false"
+            android:fontFamily="@font/montserrat"
+            android:isScrollContainer="true"
+            android:maxLines="10000"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
+            android:text="All True news to be displayed here"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
