--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -28,15 +28,14 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
-            android:fadeScrollbars="false"
             android:fontFamily="@font/montserrat"
             android:isScrollContainer="true"
             android:maxLines="10000"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
             android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
             android:text="All the news is displayed here"
-            android:textAlignment="viewStart"
+            android:textAlignment="textStart"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
