--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
     tools:context=".TrueNews">
-    <!-- A ScrollView to make the layout scrollable -->
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -24,15 +24,11 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
-            android:fadeScrollbars="false"
             android:fontFamily="@font/montserrat"
-            android:isScrollContainer="true"
             android:maxLines="10000"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
             android:text="All True news to be displayed here"
-            android:textAlignment="viewStart"
+            android:textAlignment="textStart"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintBottom_toBottomOf="parent"
