--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_all_news.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/allnews_layout"
@@ -8,16 +7,14 @@
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
     tools:context=".AllNews">
-
     <!-- A ScrollView to make the layout scrollable -->
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <!-- The TextView to display all the news -->
         <TextView
             android:id="@+id/allnewstextview"
@@ -32,10 +29,11 @@
             android:maxLines="10000"
             android:scrollbars="vertical"
             android:text="All the news is displayed here"
-            android:textAlignment="textStart"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textStyle="italic" />
 
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
