--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_fake_news.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/truenews_layout"
+    android:id="@+id/fakenews_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
-    tools:context=".TrueNews">
-
+    tools:context=".AllNews">
     <!-- A ScrollView to make the layout scrollable -->
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <!-- The TextView to display the true news -->
+        <!-- The TextView to display all the news -->
         <TextView
             android:id="@+id/fakenewstextview"
             android:layout_width="match_parent"
@@ -27,18 +25,16 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
-            android:fadeScrollbars="false"
             android:fontFamily="@font/montserrat"
-            android:isScrollContainer="true"
             android:maxLines="10000"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
-            android:text="All True news to be displayed here"
-            android:textAlignment="viewStart"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+            android:text="All the fake news is displayed here"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textStyle="italic"
+            tools:ignore="MissingConstraints" />
 
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
