--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_true_news.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/truenews_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sleepy_black"
-    tools:context=".TrueNews">
-
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    tools:context=".AllNews">
+    <!-- A ScrollView to make the layout scrollable -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
+        <!-- The TextView to display all the news -->
         <TextView
             android:id="@+id/truenewstextview"
-            android:layout_width="343dp"
-            android:layout_height="579dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="37dp"
             android:layout_marginTop="23dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/shadowbox"
             android:fontFamily="@font/montserrat"
-            android:isScrollContainer="true"
             android:maxLines="10000"
             android:scrollbars="vertical"
-            android:text="All True news to be displayed here"
-            android:textAlignment="textStart"
-            android:textAllCaps="false"
+            android:text="All the true news is displayed here"
+            android:textAlignment="center"
+            android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </ScrollView>
+            android:textStyle="italic"
+            tools:ignore="MissingConstraints" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
